# IAResipa

./: .env  db_01_persistencia_supabase.py  docker-compose.yml  setup.py
0.0.0.tipsAgents/: .env  0.instrucao.md  1.instrucao.md
0.0.0.tipsAgents/src/agente_roteador/: .env.example  .gitignore  main.py  mcp-server.spec  pyproject.toml  setup.py  testar.cmd
0.0.0.tipsAgents/src/agente_roteador/compile/databricks/: README.md  build_wheel.cmd  deploy.cmd  deploy.sh  example_notebook.py  install.cmd  pyproject.toml
0.0.0.tipsAgents/src/agente_roteador/compile/windows/: criarexe.cmd  install.cmd
0.0.0.tipsAgents/src/agente_roteador/src/: __init__.py  adapters.py  api.py  cache.py  config.py  errors.py  models.py  monitoring.py  router.py  security.py  server.py
0.0.0.tipsAgents/src/agente_roteador/src/config/: capabilities.yaml  prompts.md  routing_rules.md  routing_rules.yaml  sources.yaml
0.0.0.tipsAgents/src/agente_roteador/src/config/schemas/: mcp_request.json
0.0.0.tipsAgents/src/agente_roteador/test/: conftest.py  executartest.cmd  test_agent_creation.py  test_commands_integration.py  test_router.py  test_server.py
0.0.0.tipsAgents/src/agente_roteador/test/fixtures/: capabilities.yaml  prompts.md  routing_rules.yaml  sources.yaml
0.0.0.tipsAgents/src/agente_roteador/tmp/: novidade.md  novigpt.md
0.firstoption/: .coverage  README.md
00.temp/: 09.waha_message_capture_for_tests.md
01.commands/: 00.dicasexecucao.md  01.instrucaotemp.md  compile_library.ps1  compile_resipaia_library.ps1  compile_resipaia_library_v2.ps1  configure_container_env.sh  (+1 more)
(+318 files in other folders)
