# Databricks Wheel Package Setup
[build-system]
requires = ["wheel", "setuptools", "databricks-connect>=7.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-databricks"
version = "0.1.0"
description = "MCP Server para Databricks"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.2",
    "PyYAML>=5.4.1",
    "google-generativeai>=0.1.0",
    "python-markdown>=3.3.4",
    "python-dotenv>=0.19.0",
    "databricks-connect>=7.3"
]

[tool.setuptools]
packages = ["src"]

[tool.wheel]
exclude = ["tests/*", "*.tests", "*.tests.*"]
